--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -2,7 +2,7 @@
 <div class="sidebar-heading">Dashboard</div>
 <div class="list-group list-group-flush">
     <a href="#!/admin/users" class="list-group-item list-group-item-action bg-light">Users</a>
-    <a href="" class="list-group-item list-group-item-action bg-light">Posts</a>
+    <a href="#!/admin/posts" class="list-group-item list-group-item-action bg-light">Posts</a>
 </div>
 </div>
 
