--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-block">Log in</button>
+                <a class="btn btn-primary btn-block" href="#!/" role="button">Home</a>
             </div>
                     
         </form>
