--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -7,20 +7,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-            <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#!/admin/users">Users</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">Link</a>
+            <a class="nav-link" href="#!/admin/posts">Posts</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="">Action</a>
-            <a class="dropdown-item" href="">Another action</a>
+        
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="">Something else here</a>
+            <a class="dropdown-item" href="#!/logout">Logout</a>
             </div>
         </li>
         </ul>
