--- a/templates/user/form-edit.html
+++ b/templates/user/form-edit.html
@@ -16,7 +16,8 @@
                   <li ng-repeat = "dat in errors">{{dat[0]}}</li>
               </ul>
             </div>
-          
+            
+         
             <form ng-submit="sendform(user)">
                 <div class="row">
                 </div>
@@ -27,12 +28,12 @@
 
                 <div class="form-group">
                   <label for="Email">Email</label>
-                  <input ng-model="user.email" type="email" class="form-control" name="email" id="email"  placeholder="Type user email" required>
+                  <input ng-model="user.email" type="email" class="form-control" name="email" id="email"  placeholder="Type user email" disabled>
                 </div>
 
                 <div class="form-group">
                   <label for="password">Password</label>
-                  <input ng-model="user.password" type="password" class="form-control" name="password" id="password" placeholder="Type user password" required>
+                  <input ng-model="user.password" type="password" class="form-control" name="password" id="password" placeholder="Type user password">
                 </div>
 
                 <h5>Tags:</h5>
@@ -45,7 +46,10 @@
                             name="{{dat.name}}" 
                             id="{{dat.id}}" 
                             value="{{dat.name}}"
-                            ng-click="tagChange(dat.id, dat.name)"> {{dat.name}}
+                            ng-click="tagChange(dat.id, dat.name)"
+                            ng-checked="checked_object(dat.id)"
+                            disabled> {{dat.name}}
+                            
                     </label>
                     
                 </div>
