--- a/templates/user/list.html
+++ b/templates/user/list.html
@@ -5,7 +5,7 @@
         <div ng-include="'../templates/partials/topbar.html'"></div>
 
         <div class="container-fluid">
-            <h2 class="mt-3">Users <a class="btn btn-success" href="#" role="button">New user</a></h2>
+            <h2 class="mt-3">Users <a class="btn btn-success" href="#!/admin/users/create" role="button">New user</a></h2>
             <table class="table">
                 <thead>
                     <tr>
@@ -22,8 +22,8 @@
                         <td>{{dat.email}}</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="">
-                                <a class="btn btn-primary" href="#" role="button">edit</a>
-                                <button class="btn btn-danger"  href="#" role="button">delete</button>
+                                <a class="btn btn-primary" href="#!/admin/users/edit/{{dat.id}}" role="button">edit</a>
+                                <button class="btn btn-danger"  ng-click="delete(dat.id)">delete</button>
 
                             </div>
                         </td>
